[package]
name = "tui-treelistview"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Interactive tree list widget for Ratatui"
readme = "Readme.md"
repository = "https://github.com/hexqnt/tui-treelistview"
documentation = "https://docs.rs/tui-treelistview"
keywords = ["tui", "ratatui", "tree", "widget", "terminal"]
categories = ["command-line-interface"]

[dependencies]
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
crossterm = { version = "0.29.0", optional = true }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
keymap = ["dep:crossterm"]
serde = ["dep:serde"]
edit = []

[[example]]
name = "demo"
required-features = ["keymap", "edit"]

[[example]]
name = "custom_keymap"
required-features = ["keymap"]

[[example]]
name = "edit_actions"
required-features = ["edit"]

[dev-dependencies]
chrono = "0.4.43"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
