[package]
name = "tui-treelistview"
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Interactive tree list widget for Ratatui"
readme = "README.md"
repository = "https://github.com/hexqnt/tui-treelistview"
documentation = "https://docs.rs/tui-treelistview"
keywords = ["tui", "ratatui", "tree", "widget", "terminal"]
categories = ["command-line-interface"]
include = [
    "src/**",
    "examples/**",
    "benches/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
ratatui = { version = "0.30.2", default-features = false, features = ["std"] }
crossterm = { version = "0.29.0", optional = true }
rustc-hash = "2.1.3"
smallvec = "1.15.2"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
keymap = ["dep:crossterm"]
serde = ["dep:serde"]

[[example]]
name = "demo"
required-features = ["keymap"]

[[example]]
name = "custom_keymap"
required-features = ["keymap"]

[dev-dependencies]
chrono = "0.4.45"
criterion = "0.8.2"
ratatui = { version = "0.30.2", features = ["crossterm"] }
serde_json = "1.0.149"

[[bench]]
name = "perf"
path = "benches/perf/main.rs"
harness = false

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
